FIX: fixed image alignment within carousal slides

--- a/assets/css/theme-select.css
+++ b/assets/css/theme-select.css
@@ -180,15 +180,17 @@ a:hover{
 
 
 /* Carousal side */
-.carousel-slide {
-    display: fixed;
-    
+.slide{
+    width: 80%;
+    justify-content: center;
+}
 
+.carousel {
+    width: 100%;
+    max-width: 500px; /* Adjust based on your layout */
+    height: 400px;
     justify-content: center;
     align-items: center;
-    height: 100%; /* Ensures it fills the height of the column */
-    width: 100%;
-    
 }
 
 .carousel-inner{
@@ -196,13 +198,21 @@ a:hover{
     height: 400px;
 
 }
+.carousel-item {
+    text-align: center;
+    justify-content: center;
+    position: relative;
+  }
 
-.carousel-inner img {
-    object-fit: contain;
-    /* object-fit: cover; */
-    max-height: 400px;
-    width: auto;
-    /* border-radius: 20px; */
+  
+.carousel-item img {
+    width: 100%; /* Ensures images fill the carousel */
+    height: auto; /* Matches carousel height */
+    object-fit: cover; /* Maintains aspect ratio while covering the frame */
+    display: block;
+    position: absolute;   
+    top: 50%;
+    transform: translateY(-50%)
 }
 
 hr {
